inputMethod: gnome-shell causes infinite loop of key event with forward-key-event
forward-key-event signal was implemented in #275 (closed) and it causes an infinite loop of key events.
To reproduce:
- Enable ibus-hangul which can send forward-key-event
- Type Shift-Space or click panel indicator menu and switch the English mode to Hangul mode
- Press Enter key or Backspace key during about 10 seconds
The key events go into an infinite loop between _onForwardKeyEvent() and vfunc_filter_key_event() in gnome-shell/js/misc/inputMethod.js because this._virtualDevice.notify_key() is called without IBus.ModifierType.IGNORED_MASK flag.