clutter: Add CLUTTER_KEY_STATE_IM_PRESSED

Currently clutter_virtual_input_device_notify_keyval() cannot set
CLUTTER_EVENT_FLAG_INPUT_METHOD and it can cause an infinite loop
with clutter_input_method_filter_key_event().
CLUTTER_KEY_STATE_IM_PRESSED can set the event flag.

https://gitlab.gnome.org/GNOME/gnome-shell/issues/531